--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "react-native-svg": "15.12.1",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
-    "twilio": "^5.10.1"
+    "twilio": "^5.10.1",
+    "expo-location": "~19.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
